# LoomSDK

./: .gitattributes  .gitignore  CMakeLists.txt  Gemfile  LICENSE  LICENSE_THIRDPARTY  LoomSDK.sublime-project  LoomSDK.sublime-workspace  MIN_CLI_VERSION  README  README.android  README.ios  README.linux  README.md  README.msvc  README.osx  README.xcode  Rakefile  RenderSupport.ls
application/: CMakeLists.txt
application/android/: AndroidManifest.xml  build.xml  project.properties
application/android/libs/: DolbyAudioLicence.txt  HockeyAppLicence.txt  Parse-1.5.0.jar.properties
application/common/: AppDelegate.cpp  DoodleLine.cpp  DoodleLine.h  System.cpp  base64.cpp  base64.h  catmullRom.h  core.cpp  embeddedAssets.cpp  embeddedAssets.h
application/ios/: AppController.h  AppController.mm  Info.plist  RootViewController.h  RootViewController.mm  main.m
application/linux/: main.cpp  main.h
application/osx/: AppController.h  AppController.mm  Info.plist  main.m  main.mm
application/ouya/: AndroidManifest.xml  project.properties
application/windows/: main.cpp
loom/common/: CMakeLists.txt
loom/common/assets/: assetProtocol.cpp  assetProtocol.h  assets.cpp  assets.h  assetsImage.c  assetsImage.h  assetsScript.cpp  assetsScript.h  assetsShader.cpp  assetsShader.h  assetsSound.cpp  assetsSound.h  assetsTests.cpp  telemetry.cpp  telemetry.h  telemetryServer.cpp  wavloader.cpp  wavloader.h
loom/common/config/: applicationConfig.cpp  applicationConfig.h
loom/common/core/: allocator.c  allocator.h  allocatorJEMalloc.c  allocatorJEMalloc.h  allocatorTests.cpp  allocator_stl.h  assert.c  assert.h  log.c  log.h  logTests.cpp  performance.cpp  performance.h  string.h  stringTable.c  stringTable.h  stringTableTests.cpp  telemetry.cpp  telemetry.h
loom/common/input/: platformGamePad.c  platformGamePad.h  platformGamePadNull.c  platformGamePadOSX.cpp  platformGamePadOuya.cpp  platformGamePadWindows.c  platformGamePad_c.h  platformSysGamePad.h
loom/common/platform/: EBPurchase.h  EBPurchase.m  RootViewController.h  platform.cpp  platform.h  platformAdMob.h  platformAdMobAndroid.cpp  platformAdMobIOS.mm  platformAdMobNull.c  platformAndroidJni.cpp  platformAndroidJni.h  platformCocoa.mm  platformDisplay.c  platformDisplay.h  platformDisplayAndroid.cpp  platformDisplayAndroid.h  platformDisplayIOS.h  platformDisplayIOS.mm  platformFacebook.cpp  platformFacebook.h  platformFacebookAndroid.cpp  platformFacebookIOS.mm  platformFile.c  platformFile.h  platformFileAndroid.cpp  platformFileAndroid.h  platformFileIOS.h  platformFileIOS.m  platformFileIOS.mm  platformFont.c  platformFont.h  platformFontIOS.mm  platformHTTPCurl.cpp  platformHttp.h  platformHttpAndroid.cpp  platformHttpOSX.mm  platformIO.c  platformIO.h  platformKeyCodes.h  platformMemory.cpp  (+37 more)
loom/common/utils/: auto_ptr.h  bipbuffer.c  bipbuffer.h  fourcc.h  guid.cpp  guid.h  humanFormat.h  json.cpp  json.h  lmAutoPtr.h  lmAutoPtrTest.cpp  md5.cpp  md5.h  utAssert.h  utBase64.cpp  utBase64.h  utByteArray.cpp  utByteArray.h  utCommon.h  utEndian.h  utMemoryPool.h  utRandom.cpp  utRandom.h  utSHA2.cpp  utSHA2.h  utSingleton.h  utStreams.cpp  utStreams.h  utString.cpp  utString.h  utTypes.h
loom/common/xml/: tinyxml2.cpp  tinyxml2.h
loom/engine/: CMakeLists.txt  allTests.cpp
loom/engine/cocos2dx/: CCCamera.cpp  CCCamera.h  CCConfiguration.cpp  CCConfiguration.h  CCDirector.cpp  CCDirector.h  CCScheduler.cpp  CCScheduler.h  LICENSE  cocos2d.cpp
loom/engine/loom2d/: l2dBlendMode.cpp  l2dBlendMode.h  l2dCatmullRomSpline.cpp  l2dCatmullRomSpline.h  l2dDisplayObject.cpp  l2dDisplayObject.h  l2dDisplayObjectContainer.cpp  l2dDisplayObjectContainer.h  l2dEventDispatcher.h  l2dImage.cpp  l2dImage.h  l2dMatrix.cpp  l2dMatrix.h  l2dPoint.cpp  l2dPoint.h  l2dQuad.cpp  l2dQuad.h  l2dQuadBatch.cpp  l2dQuadBatch.h  l2dRectangle.h  l2dScript.cpp  l2dShape.cpp  l2dShape.h  l2dSprite.cpp  l2dSprite.h  l2dStage.cpp  l2dStage.h
loom/engine/physics/: lsPhysics.cpp  lsPhysics.h  lsPhysicsPackage.cpp
loom/engine/sound/: lsSound.cpp  lsSoundPackage.cpp  wavloader.cpp
loom/engine/tasks/: tasks.c  tasks.h  tasksInternal.h  tasksTests.cpp
loom/graphics/: CMakeLists.txt  gfxBitmapData.cpp  gfxBitmapData.h  gfxColor.cpp  gfxColor.h  gfxGLES2EntryPoints.h  gfxGraphics.cpp  gfxGraphics.h  gfxGraphicsAndroid.cpp  gfxGraphicsIOS.mm  gfxGraphicsOSX.mm  gfxGraphicsWindows.cpp  gfxMath.h  gfxQuadRenderer.cpp  gfxQuadRenderer.h  gfxScript.cpp  gfxShader.cpp  gfxShader.h  gfxShaders.cpp  gfxShaders.h  gfxStateManager.c  gfxStateManager.h  gfxTexture.cpp  gfxTexture.h  gfxVectorGraphics.cpp  gfxVectorGraphics.h  gfxVectorRenderer.cpp  gfxVectorRenderer.h
loom/graphics/internal/: bx_bgfx_commit_hashes.txt
loom/script/: CMakeLists.txt  loomscript.h
loom/script/common/: lsError.cpp  lsError.h  lsFile.cpp  lsFile.h  lsLog.cpp  lsLog.h  lsSimpleGlob.h
loom/script/compiler/: lsAST.h  lsAlias.cpp  lsAlias.h  lsBC.cpp  lsBC.h  lsBuildInfo.cpp  lsBuildInfo.h  lsCompiler.cpp  lsCompiler.h  lsCompilerLog.cpp  lsCompilerLog.h  lsDeclarationVisitor.h  lsJitBC.cpp  lsJitBC.h  lsJitTypeCompiler.cpp  lsJitTypeCompiler.h  lsLexer.cpp  lsLexer.h  lsMemberVisitor.h  lsParser.cpp  lsParser.h  lsScope.cpp  lsScope.h  lsToken.cpp  lsToken.h  lsTraversalVisitor.cpp  lsTraversalVisitor.h  lsTypeCompiler.cpp  lsTypeCompiler.h  lsTypeCompilerBase.cpp  lsTypeCompilerBase.h  lsTypeQualifyVisitor.cpp  lsTypeQualifyVisitor.h  lsTypeValidator.h  lsTypeVisitor.h  lsVisitor.h
loom/script/native/: lsLuaBridge.cpp  lsLuaBridge.h  lsLuaBridgeFuncTraits.h  lsNative.h  lsNativeDelegate.cpp  lsNativeDelegate.h  lsNativeInterface.cpp  lsNativeInterface.h
loom/script/reflection/: lsAssembly.cpp  lsAssembly.h  lsByteCode.cpp  lsByteCode.h  lsFieldInfo.cpp  lsFieldInfo.h  lsJitByteCode.cpp  lsJitByteCode.h  lsMemberInfo.h  (+9 more)
tools/assetAgent/: CMakeLists.txt
tools/ldb/: CMakeLists.txt
tools/loomexec/: CMakeLists.txt
tools/lsc/: CMakeLists.txt
tools/shaderc/: CMakeLists.txt  shaderc.cpp
tools/unittest/: CMakeLists.txt
tools/winloom/: CMakeLists.txt  winloom.c
(+1989 files in other folders)
